<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayoutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/str_frame_layout_title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:background="#E91E63"
            android:gravity="bottom|end"
            android:text="@string/text_view_1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:background="#009688"
            android:gravity="bottom|end"
            android:text="@string/text_view_2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:background="#673AB7"
            android:gravity="bottom|end"
            android:text="@string/text_view_3"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
